# bookmark

./: README.md  notes.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: books.json
src-tauri/src/: lib.rs
ui/: bookDetails.html  bookDetailsScripts.js  index.html  scripts.js  styles.css
